tests/ui/issues/issue-23189.rs
mod module {}

fn main() {
    let _ = module { x: 0 }; //~ERROR expected struct
}
